Assignment05/prog1/Assignment05/error.txt
1)
gcc -std=c99 -Wall -Wpointer-arith -Wfatal-errors -lm -g primes.c -L../prog1lib/lib -lprog1 -iquote../prog1lib/lib -o primes -lm
primes.c:7:10: fatal error: Bas.eh: No such file or directory
1lib

Die Libary wurde falsch aufgerufen. Statt #include "base.h", wurde #include "bas.eh" geschrieben, diese Datei existiert nicht in der libary

2)
gcc -std=c99 -Wall -Wpointer-arith -Wfatal-errors -lm -g primes.c -L../prog1lib/lib -lprog1 -iquote../prog1lib/lib -o primes -lm
primes.c: In function ‘print_primes_in_intervall’:
primes.c:19:16: error: ‘prime’ undeclared (first use in this function)
   19 |         while (prime < upper){
      |                ^~~~~
compilation terminated due to -Wfatal-errors.
make: *** [Makefile:18: primes] Error 1

Die Variable prime wurde genutzt bevor sie deklariert wurde

3)
gcc -std=c99 -Wall -Wpointer-arith -Wfatal-errors -lm -g primes.c -L../prog1lib/lib -lprog1 -iquote../prog1lib/lib -o primes -lm
In file included from ../prog1lib/lib/Base.h:140,
                 from primes.c:7:
primes.c: In function ‘print_primes_in_intervall’:
primes.c:21:13: error: expected ‘,’ or ‘;’ before ‘_Bool’
   21 |             bool is_a_prime = true;
      |             ^~~~
compilation terminated due to -Wfatal-errors.
make: *** [Makefile:18: primes] Error 1

Fehlendes Semicolon :(

4)
gcc -std=c99 -Wall -Wpointer-arith -Wfatal-errors -lm -g primes.c -L../prog1lib/lib -lprog1 -iquote../prog1lib/lib -o primes -lm
primes.c: In function ‘print_primes_in_intervall’:
primes.c:23:35: error: lvalue required as left operand of assignment
   23 |                     if( prime % i = 0 ){
      |                                   ^
compilation terminated due to -Wfatal-errors.
make: *** [Makefile:18: primes] Error 1

Für compare wurde ne Zuweisung genutzt, also = statt ==

5)
primes.c: At top level:
primes.c:36:1: error: expected identifier or ‘(’ before ‘}’ token
   36 | }
      | ^
compilation terminated due to -Wfatal-errors.
make: *** [Makefile:18: primes] Error 1

Geschweifte Klammer zu viel